# courtWatcher

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
data/: clubs.json
scripts/: check_availability.py  fetch_clubs.py  telegram_bot.py  watch_availability.py
scripts/bot/: clubs.py  constants.py  formatters.py  handlers.py  keyboards.py  llm.py  watchers.py
src/lazuz_api/: auth.py  client.py  config.py
