[project]
name = "lazuz-api"
version = "0.1.0"
description = "Minimal Lazuz court availability checker"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "python-telegram-bot>=21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lazuz_api"]
